[metadata]
name = fastcmap
author = fallnjump
author_email = 
version = attr: fastcmap.__version__
license = LICENSE
description = a matplotlib.pyplot compatible color-map library faster than matplotlib.pyplot
long_description = file: README_jp.md

[options]
packages = find:
include_package_data=True
install_requires =
    numpy
    pillow

#[options.extras_require]
#develop =
#    

#[options.entry_points]
#console_scripts =
#    noterm =

