[metadata]
name = fastcmap
author = fallnjump
author_email = 
version = attr: fastcmap.__version__
license = LICENSE
description = a fast colormap library.
long_description = file: README.md

[options]
packages = find:
include_package_data=True
install_requires =
    numpy
    pillow

#[options.extras_require]
#develop =
#    

#[options.entry_points]
#console_scripts =
#    noterm =


